--- a/TenoStore.API/appsettings.json
+++ b/TenoStore.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexoStore;TrustServerCertificate=True;Trusted_Connection=True;"
+  }
 }
