--- a/TenoStore.API/appsettings.json
+++ b/TenoStore.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexoStore;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexnoStore;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
