--- a/TenoStore.API/appsettings.json
+++ b/TenoStore.API/appsettings.json
@@ -8,5 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexnoStore;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ApiUrl": "https://localhost:7020/"
+
 }
