--- a/TenoStore.API/appsettings.json
+++ b/TenoStore.API/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexnoStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexnoStore;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Redis":  "localhost"
   },
   "ApiUrl": "https://localhost:7020/"
 
