--- a/TenoStore.API/appsettings.json
+++ b/TenoStore.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexnoStore;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "Redis":  "localhost"
+    "Redis": "127.0.0.1:6379"
   },
   "ApiUrl": "https://localhost:7020/"
 
