Setting up identity to use the token

--- a/TenoStore.API/appsettings.json
+++ b/TenoStore.API/appsettings.json
@@ -10,6 +10,10 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TexnoStore;Trusted_Connection=True;MultipleActiveResultSets=true",
     "Redis": "127.0.0.1:6379"
   },
+  "Token": {
+    "Key": "km0QHdN1V18oz8Ecqonwr6nYwagENkT6",
+    "Issuer": "https://localhost:7020/"
+  },
   "ApiUrl": "https://localhost:7020/"
 
 }
